--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,6 +4,23 @@ $color-primary: #eee;
 $color-primary-lighten: lighten($color-primary, 10%);
 $color-primary-darken: darken($color-primary, 10%);
 
-//font
+$color-secondary: #3d4249;
+$color-secondary-lighten: lighten($color-secondary, 15%);
+
+$color-thertiary: #42a5f5;
+$color-thertiary-lighten: ligthen($color-thertiary, 15%);
+
+//font-weight
 $font-bold-regular: 400;
 $font-bold-weight: 700;
+
+//font-size
+$font-size-regular: 1.6rem;
+$font-size-big: 3.5rem;
+$font-size-mid: 2.5rem;
+
+//grid
+
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
