--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -31,7 +31,7 @@
       line-height: 3rem;
 
       .header-primary-main {
-        font-size: 3rem;
+        font-size: $font-size-big;
         animation: moveInRight 1.5s ease-out;
       }
       .header-primary-sub {
