--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@ html {
   font-size: 0.625rem; }
 
 body {
-  font-family: "Roboto", sans-serif; }
+  font-family: "Roboto", sans-serif;
+  padding: 3rem; }
 
 @keyframes moveInRight {
   0% {
@@ -31,6 +32,9 @@ body {
   100% {
     opacity: 1;
     transform: translate(0); } }
+
+.u-text-align-center {
+  text-align: center; }
 
 .btn:link,
 .btn:visited {
@@ -73,6 +77,35 @@ body {
   animation: moveInBtn 1.3s ease-in 0.7s;
   animation-fill-mode: backwards; }
 
+.btn-text:link, .btn-text:visited {
+  display: inline-block;
+  font-size: 1.6rem;
+  transition: all 0.2s;
+  text-decoration: none;
+  color: #42a5f5; }
+
+.btn-text:hover {
+  background-color: black;
+  transform: translateY(-5px); }
+
+.btn-text:active {
+  color: white;
+  transform: translateY(3px); }
+
+.row {
+  max-width: 114rem;
+  margin: 0 auto; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row .col-1-2 {
+    float: left;
+    width: calc((100% - 6rem) / 2);
+    background-color: #eee; }
+    .row .col-1-2:not(:last-child) {
+      margin-right: 6rem; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(238, 238, 238, 0.1), rgba(213, 213, 213, 0.4)), url("https://images.unsplash.com/photo-1652961989677-a236d38f63f6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
@@ -101,9 +134,28 @@ body {
       color: #eee;
       line-height: 3rem; }
       .header .header-description .header-primary .header-primary-main {
-        font-size: 3rem;
+        font-size: 3.5rem;
         animation: moveInRight 1.5s ease-out; }
       .header .header-description .header-primary .header-primary-sub {
         font-size: small;
         letter-spacing: 1.17rem;
         animation: moveInLeft 1.5s ease-out; }
+
+.section-about {
+  margin-top: -26vh;
+  padding: 25rem 0; }
+  .section-about .heading-secondary {
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 3.5rem;
+    background: linear-gradient(to right, #3d4249, #606873);
+    color: transparent;
+    -webkit-background-clip: text;
+    transition: all 0.2s; }
+    .section-about .heading-secondary:hover {
+      transform: skewY(2deg) scale(1.5); }
+  .section-about .heading-thertiary {
+    text-transform: uppercase;
+    font-size: 2.5rem; }
+  .section-about .lorem {
+    font-size: 1.6rem; }
