--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,8 +3,11 @@
 
 @import "base/base";
 @import "base/animations";
+@import "base/utiliy";
 
 @import "components/button";
 
 @import "layout/grid";
 @import "layout/header";
+
+@import "pages/home";
