add:secondary section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import "base/utiliy";
 
 @import "components/button";
+@import "components/composition";
 
 @import "layout/grid";
 @import "layout/header";
