--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,28 @@ body {
   color: white;
   transform: translateY(3px); }
 
+.composition {
+  position: relative; }
+  .composition__photo {
+    width: 45%;
+    position: absolute;
+    z-index: 5;
+    transition: all 0.2s; }
+    .composition__photo--p1 {
+      top: 4rem;
+      left: 0; }
+    .composition__photo--p2 {
+      top: 0;
+      right: 10rem; }
+    .composition__photo--p3 {
+      top: 27rem;
+      left: 8rem; }
+    .composition__photo:hover {
+      z-index: 7;
+      outline: 2rem solid #606873;
+      outline-offset: 1rem;
+      transform: scale(1.05); }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
@@ -101,8 +123,7 @@ body {
     clear: both; }
   .row .col-1-2 {
     float: left;
-    width: calc((100% - 6rem) / 2);
-    background-color: #eee; }
+    width: calc((100% - 6rem) / 2); }
     .row .col-1-2:not(:last-child) {
       margin-right: 6rem; }
 
