--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -3,8 +3,14 @@
   margin: 0 auto;
   @include clearFix;
   .col-1-2 {
-    float: left;
     width: calc((100% - #{$gutter-horizontal}) / 2);
+  }
+  .col-1-4 {
+    width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
+  }
+
+  [class^="col-"] {
+    float: left;
     &:not(:last-child) {
       margin-right: $gutter-horizontal;
     }
