--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -22,3 +22,17 @@
     font-size: $font-size-regular;
   }
 }
+
+.section-features {
+  padding: 15rem 1rem;
+  background-image: linear-gradient(to right bottom, rgba($color-primary, 0.1), rgba($color-primary-darken, 0.4)),
+    url("https://images.unsplash.com/photo-1652961989677-a236d38f63f6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-top: -4rem;
+  transform: skewY(-5deg);
+
+  & > * {
+    transform: skewY(5deg);
+  }
+}
