--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -8,6 +8,9 @@
   .col-1-4 {
     width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
   }
+  .col-1-3 {
+    width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
+  }
 
   [class^="col-"] {
     float: left;
