--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,4 +1,5 @@
-.section-about {
+.section-about,
+.section-third {
   margin-top: -26vh;
   padding: 25rem 0;
   .heading-secondary {
@@ -35,4 +36,9 @@
   & > * {
     transform: skewY(5deg);
   }
+}
+
+.section-third {
+  padding: 25rem 0 50rem 0;
+  margin-top: -10rem;
 }
