--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import "components/composition";
 @import "components/feature-box";
 @import "components/card";
+@import "components/image";
 
 @import "layout/grid";
 @import "layout/header";
