--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,44 +1,66 @@
-.section-about,
-.section-third {
-  margin-top: -26vh;
-  padding: 25rem 0;
-  .heading-secondary {
-    display: inline-block;
-    text-transform: uppercase;
-    font-size: $font-size-big;
-    background: linear-gradient(to right, $color-secondary, $color-secondary-lighten);
-    color: transparent;
-    -webkit-background-clip: text;
+body {
+  background-color: #f7f7f7;
 
-    transition: all 0.2s;
-    &:hover {
-      transform: skewY(2deg) scale(1.5);
+  .section-about,
+  .section-third {
+    margin-top: -26vh;
+    padding: 25rem 0;
+    .heading-secondary {
+      display: inline-block;
+      text-transform: uppercase;
+      font-size: $font-size-big;
+      background: linear-gradient(to right, $color-secondary, $color-secondary-lighten);
+      color: transparent;
+      -webkit-background-clip: text;
+
+      transition: all 0.2s;
+      &:hover {
+        transform: skewY(2deg) scale(1.5);
+      }
+    }
+    .heading-thertiary {
+      text-transform: uppercase;
+      font-size: $font-size-mid;
+    }
+    .lorem {
+      font-size: $font-size-regular;
     }
   }
-  .heading-thertiary {
-    text-transform: uppercase;
-    font-size: $font-size-mid;
-  }
-  .lorem {
-    font-size: $font-size-regular;
-  }
-}
 
-.section-features {
-  padding: 15rem 1rem;
-  background-image: linear-gradient(to right bottom, rgba($color-primary, 0.1), rgba($color-primary-darken, 0.4)),
-    url("https://images.unsplash.com/photo-1652961989677-a236d38f63f6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
-  background-position: center;
-  background-repeat: no-repeat;
-  margin-top: -4rem;
-  transform: skewY(-5deg);
+  .section-features {
+    padding: 15rem 1rem;
+    background-image: linear-gradient(to right bottom, rgba($color-primary, 0.1), rgba($color-primary-darken, 0.4)),
+      url("https://images.unsplash.com/photo-1652961989677-a236d38f63f6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-top: -4rem;
+    transform: skewY(-5deg);
 
-  & > * {
-    transform: skewY(5deg);
+    & > * {
+      transform: skewY(5deg);
+    }
   }
-}
 
-.section-third {
-  padding: 25rem 0 50rem 0;
-  margin-top: -10rem;
+  .section-third {
+    padding: 25rem 0 50rem 0;
+    margin-top: -10rem;
+  }
+
+  .section-video {
+    padding: 15rem 0;
+
+    .heading-secondary {
+      display: inline-block;
+      text-transform: uppercase;
+      font-size: $font-size-big;
+      background: linear-gradient(to right, $color-secondary, $color-secondary-lighten);
+      color: transparent;
+      -webkit-background-clip: text;
+
+      transition: all 0.2s;
+      &:hover {
+        transform: skewY(2deg) scale(1.5);
+      }
+    }
+  }
 }
