--- a/css/style.css
+++ b/css/style.css
@@ -342,9 +342,20 @@ body {
       transform: skewY(5deg); }
   body .section-third {
     padding: 25rem 0 50rem 0;
-    margin-top: -10rem; }
+    margin-top: -10rem;
+    z-index: -40; }
   body .section-video {
+    margin-top: 20rem;
+    position: relative;
     padding: 15rem 0; }
+    body .section-video .video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      opacity: 0.15; }
     body .section-video .heading-secondary {
       display: inline-block;
       text-transform: uppercase;
