--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -44,10 +44,22 @@ body {
   .section-third {
     padding: 25rem 0 50rem 0;
     margin-top: -10rem;
+    z-index: -40;
   }
 
   .section-video {
+    margin-top: 20rem;
+    position: relative;
     padding: 15rem 0;
+    .video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      opacity: 0.15;
+    }
 
     .heading-secondary {
       display: inline-block;
