--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "components/feature-box";
 @import "components/card";
 @import "components/image";
+@import "components/login";
 
 @import "layout/grid";
 @import "layout/header";
