--- a/sass/components/_login.scss
+++ b/sass/components/_login.scss
@@ -1,13 +1,32 @@
 .login {
+  display: flex;
+  align-items: center;
   height: 40rem;
   background-image: linear-gradient(105deg, rgba(#fff, 0.8) 50%, transparent 50%),
     url(https://images.unsplash.com/photo-1659359269147-389d4109817c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80);
-  &__form {
+  .form {
     margin: 0 auto;
     width: 60%;
-    height: 6rem;
-    background-size: cover;
   }
+
   &__input {
+    font-size: 1.5rem;
+    font-family: inherit;
+    padding: 1.5rem 2rem;
+    border-radius: 2px;
+    background-color: rgba(#fff, 0.5s);
+    border-bottom: 3px solid transparent;
+    border: none;
+    transition: all 0.2s;
+
+    color: inherit;
+    &:focus {
+      outline: none;
+      border-bottom: 3px solid green;
+
+      &:invalid {
+        border-bottom: 3px solid red;
+      }
+    }
   }
 }
