--- a/css/style.css
+++ b/css/style.css
@@ -333,6 +333,61 @@ body {
         letter-spacing: 1.17rem;
         animation: moveInLeft 1.5s ease-out; }
 
+.navigation__checkbox {
+  display: none; }
+
+.navigation__label {
+  background-color: white;
+  height: 7rem;
+  width: 7rem;
+  position: fixed;
+  top: 6rem;
+  right: 6rem;
+  border-radius: 50%;
+  z-index: 3000; }
+
+.navigation__background {
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
+  position: fixed;
+  top: 6.5rem;
+  right: 6.5rem;
+  background-image: radial-gradient(#3d4249, #42a5f5);
+  z-index: 1000; }
+
+.navigation__nav {
+  background-color: #3d4249;
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  width: 100%;
+  z-index: 2200; }
+
+.navigation__ul {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+
+.navigation__li {
+  list-style: none; }
+
+.navigation__a:link, .navigation__a:visited {
+  font-size: 3rem;
+  font-weight: 300;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  background-image: linear-gradient(120deg, transparent 50%, white 50%);
+  transition: all 0.2s;
+  background-size: 220%; }
+
+.navigation__a:hover, .navigation__a:active {
+  background-position: 100%;
+  color: #42a5f5; }
+
 body {
   background-color: #f7f7f7; }
   body .section-about,
