--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -3,7 +3,7 @@
     display: none;
   }
   &__label {
-    background-color: white;
+    background-color: lightgray;
     height: 7rem;
     width: 7rem;
     position: fixed;
@@ -68,5 +68,45 @@
   &__checkbox:checked ~ &__nav {
     width: 100%;
     opacity: 1;
+  }
+
+  &__icon {
+    margin-top: 3.5rem;
+    margin-left: 2rem;
+    position: relative;
+    &,
+    &::before,
+    &::after {
+      width: 3rem;
+      height: 2px;
+      display: inline-block;
+      background-color: black;
+    }
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      transition: all 0.2s;
+    }
+
+    &::before {
+      top: -1rem;
+    }
+    &::after {
+      top: 1rem;
+    }
+  }
+
+  &__checkbox:checked + &__label &__icon {
+    background-color: transparent;
+  }
+  &__checkbox:checked + &__label &__icon::before {
+    top: 0;
+    transform: rotate(45deg);
+  }
+  &__checkbox:checked + &__label &__icon::after {
+    top: 0;
+    transform: rotate(-45deg);
   }
 }
