[style,markup] : modal 마무리

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import "components/card";
 @import "components/image";
 @import "components/login";
+@import "components/modal";
 
 @import "layout/grid";
 @import "layout/header";
