--- a/css/style.css
+++ b/css/style.css
@@ -280,6 +280,56 @@ body {
       .login__input:focus:invalid {
         border-bottom: 3px solid red; }
 
+.modal {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: black;
+  z-index: 5000;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.4s; }
+  .modal:target {
+    visibility: visible;
+    opacity: 1; }
+  .modal__content {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    width: 75%;
+    height: 48rem;
+    display: table;
+    background-color: white; }
+  .modal__left {
+    width: 33.3333%;
+    display: table-cell; }
+  .modal__right {
+    padding: 3rem;
+    width: 66.6666%;
+    display: table-cell;
+    vertical-align: middle; }
+  .modal__text {
+    font-size: 1.5rem;
+    column-count: 2;
+    column-rule: 1px solid black; }
+  .modal__img {
+    display: block;
+    width: 100%; }
+  .modal__head {
+    font-weight: 700;
+    font-size: 3rem; }
+  .modal__close:link, .modal__close:visited {
+    text-decoration: none;
+    cursor: pointer;
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+    font-size: 2rem; }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
